# uestc-power-monitor

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config.toml.example  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: api.rs  config.rs  db.rs  lib.rs  main.rs  notify.rs  utils.rs
