[package]
name = "uestc-power-monitor"
version = "0.5.1"
edition = "2024"

[dependencies]
uestc-client = "0.3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
openssl = { version = "0.10", features = ["vendored"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

[patch.crates-io]
uestc-client = {path = "../uestc-client"}
